--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,42 @@
 /*  your css code here. If applicable */
+.grid-container {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    grid-template-rows: auto;
+    gap: 5px;
+    background-color: green;
+    padding: 5px;
+}
+
+.grid-item {
+    background-color: green;
+    color: white;
+    font-size: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 2px solid white;
+    padding: 20px;
+}
+
+.item-1 {
+    grid-column: span 2;
+}
+.item-2 {
+    grid-row: span 4;
+}
+.item-3, .item-4 {
+    grid-column: span 1;
+}
+.item-5 {
+    grid-column: span 2;
+}
+.item-6 {
+    grid-column: span 1;
+}
+.item-7, .item-8, .item-9 {
+    grid-column: span 1;
+}
+.item-10 {
+    grid-column: span 2;
+}
