--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,3 @@
-/*  your css code here. If applicable */
 .grid-container {
     display: grid;
     grid-template-columns: 1fr 2fr;
@@ -8,7 +7,16 @@
     padding: 5px;
 }
 
-.grid-item {
+#grid {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    grid-template-rows: auto;
+    gap: 5px;
+    background-color: green;
+    padding: 5px;
+}
+
+#grid div {
     background-color: green;
     color: white;
     font-size: 20px;
@@ -19,24 +27,25 @@
     padding: 20px;
 }
 
-.item-1 {
+#grid div:nth-child(1) {
     grid-column: span 2;
 }
-.item-2 {
+#grid div:nth-child(2) {
     grid-row: span 4;
 }
-.item-3, .item-4 {
+#grid div:nth-child(3), #grid div:nth-child(4) {
     grid-column: span 1;
 }
-.item-5 {
+#grid div:nth-child(5) {
     grid-column: span 2;
 }
-.item-6 {
+#grid div:nth-child(6) {
     grid-column: span 1;
 }
-.item-7, .item-8, .item-9 {
+#grid div:nth-child(7), #grid div:nth-child(8), #grid div:nth-child(9) {
     grid-column: span 1;
 }
-.item-10 {
+#grid div:nth-child(10) {
     grid-column: span 2;
+    grid-row: auto;
 }
