--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,6 @@
-.grid-container {
-    display: grid;
-    grid-template-columns: 1fr 2fr;
-    grid-template-rows: auto;
-    gap: 5px;
-    background-color: green;
-    padding: 5px;
-}
-
 #grid {
     display: grid;
-    grid-template-columns: 1fr 2fr;
+    grid-template-columns: 1fr 1fr;
     grid-template-rows: auto;
     gap: 5px;
     background-color: green;
@@ -31,21 +22,17 @@
     grid-column: span 2;
 }
 #grid div:nth-child(2) {
-    grid-row: span 4;
+    grid-row: span 2;
 }
 #grid div:nth-child(3), #grid div:nth-child(4) {
     grid-column: span 1;
 }
-#grid div:nth-child(5) {
-    grid-column: span 2;
-}
-#grid div:nth-child(6) {
+#grid div:nth-child(5), #grid div:nth-child(6) {
     grid-column: span 1;
 }
 #grid div:nth-child(7), #grid div:nth-child(8), #grid div:nth-child(9) {
     grid-column: span 1;
 }
 #grid div:nth-child(10) {
-    grid-column: span 2;
-    grid-row: auto;
+    grid-column: span 1;
 }
